# rIC3

./: .gitignore  .gitmodules  Cargo.toml
src/: bmc.rs  kind.rs  lib.rs  main.rs  options.rs  options_display.rs  portfolio.rs
src/frontend/: aig.rs
src/ic3/: frame.rs  mod.rs  proofoblig.rs  verify.rs
src/transys/: mod.rs
